--- a/app/src/main/res/drawable/background_radius_gray.xml
+++ b/app/src/main/res/drawable/background_radius_gray.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#DDDDDD" />
+    <solid android:color="@color/Gray_300" />
     <corners android:radius="8dp" />
     <padding android:left="8dp" android:top="4dp" android:right="8dp" android:bottom="4dp" />
 </shape>
