--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -12,7 +12,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/typeBarLayout"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="48dp"
             android:background="@color/mainColor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -184,8 +184,10 @@
                 android:layout_height="0dp"
                 android:hint="댓글을 입력하세요"
                 android:background="@color/transparent"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="12dp"
+                android:textColor="@color/gray"
+                android:textSize="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -194,8 +196,11 @@
             <ImageButton
                 android:id="@+id/commentBtn"
                 android:src="@drawable/ic_sending"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:tint="@color/Green_500"
+                android:background="@color/transparent_ripple_color"
+                android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
