--- a/app/src/main/res/layout/fragment_ai_question.xml
+++ b/app/src/main/res/layout/fragment_ai_question.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/typeBarLayout"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="48dp"
         android:background="@color/mainColor"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginEnd="50dp"
             android:gravity="left|center_vertical"
-            android:text="AI 진로상담"
+            android:text="AI 진로상담 설문지"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
