--- a/app/src/main/res/layout/fragment_team_building.xml
+++ b/app/src/main/res/layout/fragment_team_building.xml
@@ -64,7 +64,9 @@
                     android:id="@+id/teamBuildingListView"
                     android:layout_width="match_parent"
                     android:layout_height="670dp"
-                    app:layout_constraintTop_toBottomOf="@id/teamimg" />
+                    app:layout_constraintTop_toBottomOf="@id/teamimg"
+                    android:dividerHeight="0dp"
+                    android:divider="@color/transparent_ripple_color"/>
 
                 <ImageView
                     android:layout_width="match_parent"
