--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -6,7 +6,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.board.view.BoardInsideActivity">
+        tools:context=".ui.board.view.BoardInsideActivity"
+        android:background="@color/white">
 
         <!-- Title Bar ConstraintLayout -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,8 +22,9 @@
 
             <ImageView
                 android:id="@+id/backButton"
-                android:layout_width="40dp"
+                android:layout_width="50dp"
                 android:layout_height="20dp"
+                android:paddingStart="10dp"
                 android:src="@drawable/ic_arrow"
 
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -57,37 +59,25 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/white"
-                android:alpha="0.0"
-                />
+                app:tint="@color/white" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <!-- Separator Line -->
-        <View
-            android:id="@+id/separatorLine"
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:background="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/typeBarLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/titleArea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:minHeight="20dp"
-            android:paddingTop="4dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:paddingTop="12dp"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
 
             android:text="제목"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/separatorLine"
+            app:layout_constraintTop_toBottomOf="@id/typeBarLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -96,9 +86,11 @@
             android:id="@+id/userNameArea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingStart="16dp"
+            android:paddingStart="24dp"
             android:gravity="start"
             android:text="userName"
+            android:textColor="@color/Gray_700"
+            android:textSize="10dp"
             app:layout_constraintTop_toTopOf="@id/timeArea"
             app:layout_constraintBottom_toBottomOf="@id/timeArea"
             app:layout_constraintStart_toStartOf="parent"
@@ -108,9 +100,12 @@
             android:id="@+id/timeArea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:paddingEnd="24dp"
             android:gravity="end"
             android:text="time"
+            android:textColor="@color/Gray_700"
+            android:textSize="10dp"
             app:layout_constraintTop_toBottomOf="@id/titleArea"
             app:layout_constraintStart_toEndOf="@id/userNameArea"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -123,7 +118,7 @@
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:paddingStart="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/timeArea"
             >
 
@@ -132,9 +127,12 @@
 
         <View
             android:id="@+id/tagSeparatorLine"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/gray"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:background="@color/light_gray"
             app:layout_constraintTop_toBottomOf="@id/tagsLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -145,14 +143,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:minHeight="100dp"
-            android:layout_margin="20dp"
-            android:padding="10dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:textSize="16sp"
             android:text="여기는 내용 영역"
             android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@id/tagSeparatorLine"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@color/light_gray"
+            app:layout_constraintTop_toBottomOf="@id/textArea" />
 
         <!-- Comments ListView -->
 
@@ -162,6 +167,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
+            android:dividerHeight="0dp"
+            android:divider="@color/transparent_ripple_color"
             app:layout_constraintBottom_toTopOf="@id/commentInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -177,6 +184,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/Gray_300"
+                app:layout_constraintBottom_toTopOf="@id/commentArea"/>
 
             <EditText
                 android:id="@+id/commentArea"
