--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.auth.IntroActivity">
+        tools:context=".ui.auth.IntroActivity"
+        android:background="@drawable/splash_background2">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -13,18 +14,29 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="580dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/loginbg"
-                />
+                android:layout_height="130dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="250dp"
+                android:src="@drawable/logo_splash" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="130dp"
+                android:layout_marginStart="24dp"
+                android:lineSpacingExtra="10dp"
+                android:text="대학생을 위한\n커리어 가이드\n커뮤니티"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/white"/>
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="360dp"
                 android:scaleType="fitXY"
                 android:layout_alignParentBottom="true"
-                android:src="@drawable/upperbg"
-                />
+                android:src="@drawable/upperbg" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,7 +52,8 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:background="@drawable/background_radius"
-                    android:layout_margin="7dp"
+                    android:layout_marginVertical="7dp"
+                    android:layout_marginHorizontal="24dp"
                     />
                 <Button
                     android:id="@+id/joinBtn"
@@ -50,7 +63,8 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:background="@drawable/background_radius"
-                    android:layout_margin="7dp"
+                    android:layout_marginVertical="7dp"
+                    android:layout_marginHorizontal="24dp"
                     />
                 <Button
                     android:id="@+id/noAccountBtn"
@@ -60,7 +74,8 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:background="@drawable/background_radius"
-                    android:layout_margin="7dp"
+                    android:layout_marginVertical="7dp"
+                    android:layout_marginHorizontal="24dp"
                     />
             </LinearLayout>
 
