--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -14,19 +14,23 @@
             android:background="@color/mainColor"
             android:orientation="vertical">
 
-            <ImageView
+            <TextView
                 android:id="@+id/imageView"
-                android:layout_width="191dp"
-                android:layout_height="25dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:src="@drawable/logo_l"
+                android:text="PATHFINDER"
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_margin="30dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="회원가입"
                 android:textColor="@color/white"
@@ -51,8 +55,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#999999"
-                android:layout_marginHorizontal="15dp"/>
+                android:background="@color/Gray_700"
+                android:layout_marginHorizontal="12dp"/>
 
             <EditText
                 android:id="@+id/emailArea"
@@ -95,8 +99,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#999999"
-                android:layout_marginHorizontal="15dp"/>
+                android:background="@color/Gray_700"
+                android:layout_marginHorizontal="12dp"/>
 
             <Button
                 android:id="@+id/joinBtn"
@@ -105,6 +109,8 @@
                 android:layout_margin="20dp"
                 android:background="@drawable/background_radius_maincolor"
                 android:text="가입 하기"
+                android:textSize="20dp"
+                android:textStyle="bold"
                 android:textColor="@color/white"
                 />
 
