--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,8 +23,11 @@
 
     <style name="AuthEditText" parent="android:Widget.EditText">
         <item name="android:background">@android:color/transparent</item>
-        <item name="android:textSize">15sp</item>
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginStart">24dp</item>
+        <item name="android:layout_marginEnd">24dp</item>
     </style>
 
     <!-- splash theme -->
