디자인 일부 수정

--- a/app/src/main/res/layout/activity_board_write.xml
+++ b/app/src/main/res/layout/activity_board_write.xml
@@ -13,7 +13,8 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
-            android:text="글쓰기"
+            android:text="게시글 작성"
+            android:textSize="20dp"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
