코드 리팩토링

--- a/app/src/main/res/layout/fragment_ai_intro.xml
+++ b/app/src/main/res/layout/fragment_ai_intro.xml
@@ -5,7 +5,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.aiService.AiIntroFragment">
+    tools:context=".ui.aiChatBot.AiIntroFragment">
 
     <Button
         android:id="@+id/button_back"
