--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -220,7 +220,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@id/mentor_regImg" />
 
-                    <ListView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/mentorList"
                         android:layout_width="match_parent"
                         android:layout_height="170dp"
@@ -267,7 +267,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@id/mentee_regImg" />
 
-                    <ListView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/menteeList"
                         android:layout_width="match_parent"
                         android:layout_height="170dp"
@@ -278,52 +278,6 @@
                         android:dividerHeight="0dp"
                         app:layout_constraintTop_toBottomOf="@id/menteeTextView"/>
 
-                    <!--team-->
-<!--                    <ImageView-->
-<!--                        android:id="@+id/team_regImg"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="240dp"-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:layout_marginStart="24dp"-->
-<!--                        android:layout_marginEnd="24dp"-->
-<!--                        android:background="@drawable/rectangle_10radius"-->
-<!--                        app:layout_constraintTop_toBottomOf="@id/mentee_regImg" />-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/teamTextView"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginStart="34dp"-->
-<!--                        android:layout_marginTop="24dp"-->
-<!--                        android:text="팀원모집"-->
-<!--                        android:textColor="@color/black"-->
-<!--                        android:textSize="20dp"-->
-<!--                        android:textStyle="bold"-->
-<!--                        app:layout_constraintStart_toStartOf="parent"-->
-<!--                        app:layout_constraintTop_toTopOf="@id/team_regImg" />-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/teamTextView_more"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginEnd="34dp"-->
-<!--                        android:layout_marginTop="32dp"-->
-<!--                        android:text="더보기"-->
-<!--                        android:textColor="@color/Blue_500"-->
-<!--                        android:textSize="12dp"-->
-<!--                        app:layout_constraintEnd_toEndOf="parent"-->
-<!--                        app:layout_constraintTop_toTopOf="@id/team_regImg" />-->
-
-<!--                    <ListView-->
-<!--                        android:id="@+id/teamList"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="170dp"-->
-<!--                        android:layout_marginTop="4dp"-->
-<!--                        android:layout_marginStart="24dp"-->
-<!--                        android:layout_marginEnd="24dp"-->
-<!--                        android:divider="@null"-->
-<!--                        android:dividerHeight="0dp"-->
-<!--                        app:layout_constraintTop_toBottomOf="@id/teamTextView"/>-->
 
                     <TextView
                         android:id="@+id/adbanner"
