--- a/app/src/main/res/layout/fragment_team_building.xml
+++ b/app/src/main/res/layout/fragment_team_building.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,34 +12,34 @@
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
-            android:layout_marginTop="14dp"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="14dp"
             android:text="프로젝트"
-            android:textStyle="bold"
-            android:textSize="20dp"
             android:textColor="@color/Gray_700"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/ic_search"
             app:layout_constraintEnd_toStartOf="@id/button2"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="20dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/ic_setting"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="20dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -52,27 +52,14 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/titleTextView">
 
-                <ImageView
-                    android:id="@+id/teamimg"
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/light_gray"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
 
                 <ListView
                     android:id="@+id/teamBuildingListView"
                     android:layout_width="match_parent"
-                    android:layout_height="670dp"
-                    app:layout_constraintTop_toBottomOf="@id/teamimg"
-                    android:dividerHeight="0dp"
-                    android:divider="@color/transparent_ripple_color"/>
+                    android:layout_height="640dp"
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/transparent_ripple_color"
-                    app:layout_constraintTop_toBottomOf="@id/teamBuildingListView"/>
+                    />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
@@ -81,11 +68,11 @@
             android:id="@+id/teamWriteBtn"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="24dp"
             android:src="@drawable/ic_writebtn"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="12dp"
-            android:layout_marginRight="24dp"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
