--- a/app/src/main/res/layout/fragment_team_building.xml
+++ b/app/src/main/res/layout/fragment_team_building.xml
@@ -53,8 +53,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/titleTextView">
 
 
-                <ListView
-                    android:id="@+id/teamBuildingListView"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/teamBuildingRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="640dp"
 
