--- a/app/src/main/res/layout/fragment_team_building.xml
+++ b/app/src/main/res/layout/fragment_team_building.xml
@@ -41,28 +41,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ScrollView
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            app:layout_constraintTop_toBottomOf="@+id/titleTextView">
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button2">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/teamBuildingRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/titleTextView">
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/teamBuildingRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="640dp"
-
-                    />
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
+                android:layout_height="wrap_content" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <ImageView
             android:id="@+id/teamWriteBtn"
